Verbetering in historicdistribution

--- a/client/main.html
+++ b/client/main.html
@@ -18,6 +18,14 @@
 <!--<link rel="icon" sizes="16x16 32x32" href="/favicon.ico?v=2">-->
 <!--<script src='https://cdnjs.cloudflare.com/ajax/libs/wnumb/1.0.4/wNumb.min.js'></script>-->
 <!--<script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>-->
+    <!--<style is="custom-style">-->
+    <!--paper-progress {-->
+    <!--width: 70%;-->
+    <!--border: solid 1px #777777;-->
+    <!----paper-progress-active-color: #777777;-->
+    <!--margin: auto;-->
+    <!--}-->
+    <!--</style>-->
 <!--</head>-->
 
 <head>
