--- a/client/body/body.html
+++ b/client/body/body.html
@@ -2,7 +2,12 @@
   {{> register}}
   <div class="loading-screen">
       <paper-spinner alt="Loading Dashboard" active></paper-spinner>
-      <h1>Loading Dashboard</h1>
+      <h1>Loading Dashboard...</h1>
+  </div>
+
+  <div class="loading-csetool">
+      <paper-spinner alt="Loading CSE Tool" active></paper-spinner>
+      <h1>Loading CSE Tool...</h1>
   </div>
 </body>
 
