--- a/client/register/register.html
+++ b/client/register/register.html
@@ -3,7 +3,11 @@
     <div class="register-container">
       <h1>Access Token: </h1>
       <paper-input class="user-token" type="text" id="input"></paper-input>
-      <paper-button>Login</paper-button>
+      <div class="access-tool">
+        <div class="token-error">This token is incorrect.</div>
+        <paper-button>Login</paper-button>
+        <a href="">CSE Tool</a>
+      </div>
     </div>
   </div>
 </template>
