Fixed leiden stuff

--- a/client/body/body.html
+++ b/client/body/body.html
@@ -26,14 +26,14 @@
               {{#with GetColumnInfo 2}}
                   {{> column}}
               {{/with}}
-              <!--{{#with GetColumnInfo 3}}-->
-                <!--{{> column}}-->
-              <!--{{/with}}-->
+              {{#with GetColumnInfo 3}}
+                  {{> column}}
+              {{/with}}
               <!--{{#with GetColumnInfo 4}}-->
                 <!--{{> column}}-->
               <!--{{/with}}-->
               <!--Always show the bachelor column-->
-              {{> futurecolumn}}
+              <!-- {{> futurecolumn}} -->
           </div>
       </div>
   </div>
