--- a/client/course/resultGraph/resultGraph.html
+++ b/client/course/resultGraph/resultGraph.html
@@ -1,7 +1,7 @@
 <template name="resultGraph">
     <div id="{{getStrippedCourseID}}_{{columnindex}}" class="course {{color}}">
         <div class="course-top">
-            <div class="name">{{Opleidingsonderdeel}}</div>
+            <div class="name">{{OpleidingsonderdeelNaam}}</div>
             <div class="top-bar {{color}}">
                 <div class="grade">{{Score}}</div>
                 {{#if validCredits }}
