--- a/client/nostudent/nostudent.html
+++ b/client/nostudent/nostudent.html
@@ -1,10 +1,8 @@
-
-
 <template name="nostudent">
-    <div class="nostudent">
-        {{> student}}
-        <div class="banner">
-            <h1>Geen student gevonden</h1>
-        </div>
+  <div class="nostudent">
+    {{> student}}
+    <div class="banner">
+      Geen student gevonden
     </div>
+  </div>
 </template>
