Added boring column

--- a/client/body/body.html
+++ b/client/body/body.html
@@ -26,12 +26,12 @@
               {{#with GetColumnInfo 2}}
                   {{> column}}
               {{/with}}
-              <!--{{#with GetColumnInfo 3}}-->
-                <!--{{> column}}-->
-              <!--{{/with}}-->
-              <!--{{#with GetColumnInfo 4}}-->
-                <!--{{> column}}-->
-              <!--{{/with}}-->
+              {{#with GetColumnInfo 3}}
+                {{> column}}
+              {{/with}}
+              {{#with GetColumnInfo 5}}
+                {{> column}}
+              {{/with}}
               <!--Always show the bachelor column-->
               {{> futurecolumn}}
           </div>
