--- a/client/main.html
+++ b/client/main.html
@@ -1,34 +1,35 @@
-<!--<head>-->
-<!--<meta charset="utf-8">-->
-<!--<meta name="google" content="notranslate" />-->
-<!--<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">-->
-<!--<title>LISSA Dashboard</title>-->
-<!--<script src="/lissa/bower_components/webcomponentsjs/webcomponents.js"></script>-->
-<!--<script src="/lissa/bower_components/chroma-js/chroma.js"></script>-->
-<!--<script src="/lissa/bower_components/d3/d3.js"></script>-->
-<!--<script src="/lissa/d3slider/d3.slider.js"></script>-->
-<!--<script src="/lissa/bower_components/pixi.js/bin/pixi.js"></script>-->
-<!--<link rel='stylesheet' href='//fonts.googleapis.com/css?family=Roboto:900,400,300,100' type='text/css'>-->
-<!--<link rel="import" href="/lissa/bower_components/paper-material/paper-material.html">-->
-<!--<link rel="import" href="/lissa/bower_components/paper-progress/paper-progress.html">-->
-<!--<link rel="import" href="/lissa/bower_components/paper-ripple/paper-ripple.html">-->
-<!--<link rel="import" href="/lissa/bower_components/paper-spinner/paper-spinner.html">-->
-<!--<link rel="import" href="/lissa/bower_components/paper-input/paper-input.html">-->
-<!--<link rel="stylesheet" href="/lissa/d3slider/d3.slider.css" />-->
-<!--<link rel="icon" sizes="16x16 32x32" href="/favicon.ico?v=2">-->
-<!--<script src='https://cdnjs.cloudflare.com/ajax/libs/wnumb/1.0.4/wNumb.min.js'></script>-->
-<!--<script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>-->
-    <!--<style is="custom-style">-->
-    <!--paper-progress {-->
-    <!--width: 70%;-->
-    <!--border: solid 1px #777777;-->
-    <!----paper-progress-active-color: #777777;-->
-    <!--margin: auto;-->
-    <!--}-->
-    <!--</style>-->
-<!--</head>-->
+<!-- <head>
+<meta charset="utf-8">
+<meta name="google" content="notranslate" />
+<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
+<title>LISSA Dashboard</title>
+<script src="/lissa/bower_components/webcomponentsjs/webcomponents.js"></script>
+<script src="/lissa/bower_components/chroma-js/chroma.js"></script>
+<script src="/lissa/bower_components/d3/d3.js"></script>
+<script src="/lissa/d3slider/d3.slider.js"></script>
+<script src="/lissa/bower_components/pixi.js/bin/pixi.js"></script>
+<link rel='stylesheet' href='//fonts.googleapis.com/css?family=Roboto:900,400,300,100' type='text/css'>
+<link rel="import" href="/lissa/bower_components/paper-material/paper-material.html">
+<link rel="import" href="/lissa/bower_components/paper-progress/paper-progress.html">
+<link rel="import" href="/lissa/bower_components/paper-ripple/paper-ripple.html">
+<link rel="import" href="/lissa/bower_components/paper-spinner/paper-spinner.html">
+<link rel="import" href="/lissa/bower_components/paper-input/paper-input.html">
+<link rel="stylesheet" href="/lissa/d3slider/d3.slider.css" />
+<link rel="icon" sizes="16x16 32x32" href="/favicon.ico?v=2">
+<script src='https://cdnjs.cloudflare.com/ajax/libs/wnumb/1.0.4/wNumb.min.js'></script>
+<script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+    <style is="custom-style">
+    paper-progress {
+    width: 70%;
+    border: solid 1px #777777;
+    --paper-progress-active-color: #777777;
+    margin: auto;
+    }
+    </style>
+</head> -->
 
-<head>
+
+ <head>
   <meta charset="utf-8">
   <meta name="google" content="notranslate"/>
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
