--- a/client/register/register.html
+++ b/client/register/register.html
@@ -6,9 +6,9 @@
       <div class="access-tool">
         <div class="token-error">This token is incorrect.</div>
         <paper-button>Login</paper-button>
-        <a class="cse1" href="">CSE Tool (1) - Jan</a>
-        <a class="cse2" href="">CSE Tool (2) - Jun</a>
-        <a class="cse3" href="">CSE Tool (3) - Sep</a>
+        <a class="cse1" href="">CSE Tool, Jan</a>
+        <a class="cse2" href="">CSE Tool, Jun</a>
+        <a class="cse3" href="">CSE Tool, Sep</a>
       </div>
     </div>
   </div>
