--- a/client/body/body.html
+++ b/client/body/body.html
@@ -29,9 +29,10 @@
               {{#with GetColumnInfo 3}}
                 {{> column}}
               {{/with}}
-              {{#with GetColumnInfo 5}}
+              <!-- {{#with GetColumnInfo 4}} This is september ;)
                 {{> column}}
-              {{/with}}
+              {{/with}} -->
+              {{> failedCourses}}
               <!--Always show the bachelor column-->
               {{> futurecolumn}}
           </div>
