--- a/client/main.html
+++ b/client/main.html
@@ -51,10 +51,11 @@ margin: auto;
   <script src='https://cdnjs.cloudflare.com/ajax/libs/wnumb/1.0.4/wNumb.min.js'></script>
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
   <style is="custom-style">
+
   paper-progress {
-    width: 70%;
-    border: solid 1px #777777;
-    --paper-progress-active-color: #777777;
+    width: 50%;
+    border: solid 1px #81a8b8;
+    --paper-progress-active-color: #81a8b8;
     margin: auto;
   }
 
