--- a/client/september/HerexamenColumn/failedColumn.html
+++ b/client/september/HerexamenColumn/failedColumn.html
@@ -6,7 +6,9 @@
         <paper-ripple></paper-ripple>
       </div>
       <div class="column-title">herexamen</div>
-      {{> CSE_bar }}
+      <div class="CSE">
+        CSE {{percent}}% <paper-progress value="{{percent}}" max="100" min="0"></paper-progress>
+      </div>
     </div>
     <div class="middle">
       {{> circleGraph}}
