Fixed coursebox coloring

--- a/client/main.html
+++ b/client/main.html
@@ -76,8 +76,8 @@ paper-checkbox.boxtolerable {
   paper-checkbox.boxtolerable {
     --paper-checkbox-checked-color: var(--Tolerable);
     --paper-checkbox-checked-ink-color: var(--Tolerable);
-    --paper-checkbox-unchecked-color: var(--paper-yellow-900);
-    --paper-checkbox-unchecked-ink-color: var(--paper-yellow-900);
+    --paper-checkbox-unchecked-color: var(--paper-yellow-a700);
+    --paper-checkbox-unchecked-ink-color: var(--paper-yellow-a700);
   }
   </style>
 </head>
