--- a/client/september/HerexamenColumn/coursebox/coursebox.html
+++ b/client/september/HerexamenColumn/coursebox/coursebox.html
@@ -1,6 +1,6 @@
 <template name="coursebox">
   <div id="{{getStrippedCourseID}}_{{columnindex}}" class="failbox course {{color}}">
-    <div class="course-top">
+    <div class="course-top {{color}}">
       <div class="name">{{Opleidingsonderdeel}}</div>
       <div class="top-bar {{color}}">
         <div class="grade">{{Score}}</div>
