Mapped Resit DB to checkboxes

--- a/client/september/circleGraph/circleGraph.html
+++ b/client/september/circleGraph/circleGraph.html
@@ -3,11 +3,11 @@
 <template name="circleGraph">
   <div class="cg-container">
     <div class="cg-bar checked" style="height: {{checked}}px">
-      <h5>{{checked}}</h5>
+      <h5>{{checked}}%</h5>
       <paper-ripple></paper-ripple>
     </div>
     <div class="cg-bar all" style="height: {{all}}px">
-      <h5>{{all}}</h5>
+      <h5>{{all}}%</h5>
       <paper-ripple></paper-ripple>
     </div>
   </div>
