--- a/client/main.html
+++ b/client/main.html
@@ -23,18 +23,21 @@ paper-progress {
   border: solid 1px #81a8b8;
   --paper-progress-active-color: #81a8b8;
   margin: auto;
+  --paper-progress-transition-duration: 0.08s;
+  --paper-progress-transition-timing-function: ease;
+  --paper-progress-transition-transition-delay: 0s;
 }
 paper-checkbox.boxfailed {
-  --paper-checkbox-checked-color: var(--Fail);
-  --paper-checkbox-checked-ink-color: var(--Fail);
-  --paper-checkbox-unchecked-color: var(--paper-red-900);
-  --paper-checkbox-unchecked-ink-color: var(--paper-red-900);
+--paper-checkbox-checked-color: var(--Fail);
+--paper-checkbox-checked-ink-color: var(--Fail);
+--paper-checkbox-unchecked-color: var(--paper-red-900);
+--paper-checkbox-unchecked-ink-color: var(--paper-red-900);
 }
 paper-checkbox.boxtolerable {
-  --paper-checkbox-checked-color: var(--Tolerable);
-  --paper-checkbox-checked-ink-color: var(--Tolerable);
-  --paper-checkbox-unchecked-color: var(--paper-yellow-900);
-  --paper-checkbox-unchecked-ink-color: var(--paper-yellow-900);
+--paper-checkbox-checked-color: var(--Tolerable);
+--paper-checkbox-checked-ink-color: var(--Tolerable);
+--paper-checkbox-unchecked-color: var(--paper-yellow-900);
+--paper-checkbox-unchecked-ink-color: var(--paper-yellow-900);
 }
 </style>
 </head> -->
@@ -66,6 +69,9 @@ paper-checkbox.boxtolerable {
     border: solid 1px #81a8b8;
     --paper-progress-active-color: #81a8b8;
     margin: auto;
+    --paper-progress-transition-duration: 1s;
+    --paper-progress-transition-timing-function: ease;
+    --paper-progress-transition-transition-delay: 0s;
   }
   paper-checkbox.boxfailed {
     --paper-checkbox-checked-color: var(--Fail);
