Added legend to circle

--- a/client/september/circleGraph/circleGraph.html
+++ b/client/september/circleGraph/circleGraph.html
@@ -12,4 +12,15 @@
     </div>
   </div>
   <div class="cg-border"></div>
+  <div class="cg-legend">
+    <div class="cg-legend-text">
+      <div class="cg-legend-square cg-blue"></div>
+      <h2><strong>{{checked}}</strong>% studenten die op <strong>{{numchecked}}</strong> vakken succesvol slagen in september.</h2>
+    </div>
+    <br>
+    <div class="cg-legend-text">
+      <div class="cg-legend-square cg-pattern"></div>
+      <h2><strong>{{all}}</strong>% studenten die op <strong>{{numall}}</strong> vakken succesvol slagen in september.</h2>
+    </div>
+  </div>
 </template>
