Fixed column collapse

--- a/client/september/HerexamenColumn/failedColumn.html
+++ b/client/september/HerexamenColumn/failedColumn.html
@@ -1,8 +1,8 @@
 <template name="failedColumn">
-  <div class="flex-column failed-column">
+  <div class="flex-column failedc">
     <div class="vertical-title">herexamen</div>
     <div class="top">
-      <div class="fa compress-colfuture fa-compress">
+      <div class="fa compress-failedc fa-compress">
         <paper-ripple></paper-ripple>
       </div>
       <div class="column-title">herexamen</div>
