Added planning column

--- a/client/body/body.html
+++ b/client/body/body.html
@@ -32,6 +32,8 @@
         {{> column}}
         {{/with}} -->
         {{> failedColumn}}
+        <!-- Planning stuff -->
+        {{> planningColumn}}
         <!--Always show the bachelor column-->
         {{> futurecolumn}}
       </div>
