--- a/client/september/HerexamenColumn/failedColumn.html
+++ b/client/september/HerexamenColumn/failedColumn.html
@@ -7,7 +7,7 @@
       </div>
       <div class="column-title">herexamen</div>
       <div class="CSE">
-        CSE {{percent}}% <paper-progress value="{{percent}}" max="100" min="0"></paper-progress>
+        CSE {{percent}}% <paper-progress value="{{percent}}" max="100" min="0"></paper-progress>{{csecheck}}/{{csesum}}
       </div>
     </div>
     <div class="middle">
