--- a/client/september/PlanningColumn/planningColumn.html
+++ b/client/september/PlanningColumn/planningColumn.html
@@ -10,10 +10,8 @@
         CSE {{percent}}% <paper-progress value="{{percent}}" max="100" min="0"></paper-progress>
       </div>
     </div>
-    <div class="middle">
-    </div>
     <div class="bottom">
-      {{> cseplanning}
+      {{> cseplanning}}
     </div>
   </div>
 </template>
