Fixed layout for sliders

--- a/client/september/PlanningColumn/cseplanning/cseplanning.html
+++ b/client/september/PlanningColumn/cseplanning/cseplanning.html
@@ -5,45 +5,45 @@
                 <span>jaar 1</span>
                 <div class="value"><span>{{jaar1}} stp</span></div>
             </div>
-            <div id="cseslider_y1"></div>
+            <div id="cseslider_y1" class="slider"></div>
         </div>
         <div class="slideflex">
             <div class="slider-top">
                 <span>jaar 2</span>
                 <div class="value"><span>{{jaar2}} stp</span></div>
             </div>
-            <div id="cseslider_y2"></div>
+            <div id="cseslider_y2" class="slider"></div>
             <div class="slider-top semester">
                 <span>semester 1</span>
                 <div class="value"><span>{{jaar2a}} stp</span></div>
             </div>
-            <div id="cseslider_y2a"></div>
+            <div id="cseslider_y2a" class="slider"></div>
             <div class="slider-top semester">
                 <span>semester 2</span>
                 <div class="value"><span>{{jaar2b}} stp</span></div>
             </div>
-            <div id="cseslider_y2b"></div>
+            <div id="cseslider_y2b" class="slider"></div>
         </div>
         <div class="slideflex">
             <div class="slider-top">
                 <span>jaar 3</span>
                 <div class="value"><span>{{jaar3}} stp</span></div>
             </div>
-            <div id="cseslider_y3"></div>
+            <div id="cseslider_y3" class="slider"></div>
         </div>
         <div class="slideflex">
             <div class="slider-top">
                 <span>jaar 4</span>
                 <div class="value"><span>{{jaar4}} stp</span></div>
             </div>
-            <div id="cseslider_y4"></div>
+            <div id="cseslider_y4" class="slider"></div>
         </div>
         <div class="slideflex">
             <div class="slider-top">
                 <span>jaar 5</span>
                 <div class="value"><span>{{jaar5}} stp</span></div>
             </div>
-            <div id="cseslider_y5"></div>
+            <div id="cseslider_y5" class="slider"></div>
         </div>
         <!-- <div class="slidetotal">
       <span>total</span>
