--- a/client/september/PlanningColumn/planningColumn.html
+++ b/client/september/PlanningColumn/planningColumn.html
@@ -6,8 +6,8 @@
         <paper-ripple></paper-ripple>
       </div>
       <div class="column-title">Studiebelastingplanning</div>
-      <div class="CSE">
-        CSE {{percent}}% <paper-progress value="{{percent}}" max="100" min="0"></paper-progress>
+      <div class="cse-progress middle">
+        <paper-progress value="{{csesum}}" max="180" min="0"></paper-progress>{{csesum}}/<strong>180</strong>
       </div>
     </div>
     <div class="bottom">
