Fixed borders in columns

--- a/client/september/PlanningColumn/cseplanning/cseplanning.html
+++ b/client/september/PlanningColumn/cseplanning/cseplanning.html
@@ -1,5 +1,5 @@
 <template name="cseplanning">
-  <div id="cseplanning" class="bottom">
+  <div id="cseplanning" class="bottom" style="border-top: 0;">
     <div class="slider-flex">
       <div class="slider-top">
         <span>jaar 1</span>
