--- a/client/september/PlanningColumn/planningColumn.html
+++ b/client/september/PlanningColumn/planningColumn.html
@@ -10,7 +10,7 @@
         <paper-progress value="{{csesum}}" max="180" min="0"></paper-progress>{{csesum}}/<strong>180</strong>
       </div>
     </div>
-    <div class="bottom">
+    <div class="bottom" style="border-top: 0;">
       {{> cseplanning}}
     </div>
   </div>
