--- a/client/futurecolumn/futurecolumn.html
+++ b/client/futurecolumn/futurecolumn.html
@@ -13,7 +13,7 @@
                 <div class="legend-item legendnot">Niet</div>
             </div>
         </div>
-        <div class="bottom">
+        <div class="bottom" style="border-top: 0;">
             {{#if Template.subscriptionsReady}}
                 {{> future}}
             {{/if}}
