--- a/client/main.html
+++ b/client/main.html
@@ -4,7 +4,6 @@
 <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
 <title>LISSA Dashboard</title>
 <script src="/lissa/bower_components/d3/d3.js"></script>
-<script src="/lissa/d3slider/d3.slider.js"></script>
 <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Roboto:900,400,300,100' type='text/css'>
 <link rel="import" href="/lissa/bower_components/paper-material/paper-material.html">
 <link rel="import" href="/lissa/bower_components/paper-progress/paper-progress.html">
@@ -23,21 +22,21 @@ paper-progress {
   border: solid 1px #81a8b8;
   --paper-progress-active-color: #81a8b8;
   margin: auto;
-  --paper-progress-transition-duration: 0.08s;
+  --paper-progress-transition-duration: 1s;
   --paper-progress-transition-timing-function: ease;
   --paper-progress-transition-transition-delay: 0s;
 }
 paper-checkbox.boxfailed {
---paper-checkbox-checked-color: var(--Fail);
---paper-checkbox-checked-ink-color: var(--Fail);
---paper-checkbox-unchecked-color: var(--paper-red-900);
---paper-checkbox-unchecked-ink-color: var(--paper-red-900);
+  --paper-checkbox-checked-color: var(--Fail);
+  --paper-checkbox-checked-ink-color: var(--Fail);
+  --paper-checkbox-unchecked-color: var(--paper-red-900);
+  --paper-checkbox-unchecked-ink-color: var(--paper-red-900);
 }
 paper-checkbox.boxtolerable {
---paper-checkbox-checked-color: var(--Tolerable);
---paper-checkbox-checked-ink-color: var(--Tolerable);
---paper-checkbox-unchecked-color: var(--paper-yellow-900);
---paper-checkbox-unchecked-ink-color: var(--paper-yellow-900);
+  --paper-checkbox-checked-color: var(--Tolerable);
+  --paper-checkbox-checked-ink-color: var(--Tolerable);
+  --paper-checkbox-unchecked-color: var(--paper-yellow-a700);
+  --paper-checkbox-unchecked-ink-color: var(--paper-yellow-a700);
 }
 </style>
 </head> -->
