show failedcolumn only if nio

--- a/client/body/body.html
+++ b/client/body/body.html
@@ -31,7 +31,9 @@
         <!-- {{#with GetColumnInfo 4}} This is september ;)
         {{> column}}
         {{/with}} -->
-        {{> failedColumn}}
+        {{#if NewInProgram}}
+            {{> failedColumn}}
+        {{/if}}
         <!-- Planning stuff -->
         {{> planningColumn}}
         <!--Always show the bachelor column-->
