Parsed the score

--- a/client/register/register.html
+++ b/client/register/register.html
@@ -1,4 +1,5 @@
 <template name="register">
+  {{> student}}
   <div class="register">
     <div class="register-container">
       <h1>Access Token: </h1>
