--- a/client/nostudent/nostudent.html
+++ b/client/nostudent/nostudent.html
@@ -2,7 +2,7 @@
 
 <template name="nostudent">
     <div class="nostudent">
-        {{> student}}
+        <!-- {{> student}} -->
         <div class="banner">
             <h1>Geen student gevonden</h1>
         </div>
