--- a/client/student/student.html
+++ b/client/student/student.html
@@ -2,9 +2,8 @@
     <div id="student" class="student">
         <i class="fa fa-user" aria-hidden="true"></i>
         <span id="studentName">{{studentName}}</span>
-        <input type="text" placeholder="Student #" value="{{student}}">
-
+        <input class="studentinput" type="text" placeholder="Student #" value="{{student}}">
         <span id="nieuw">{{newStudent}}</span>
-        <paper-button>Go</paper-button>
+        <!-- <paper-button>Go</paper-button> -->
     </div>
 </template>
