--- a/client/september/HerexamenColumn/coursebox/coursebox.html
+++ b/client/september/HerexamenColumn/coursebox/coursebox.html
@@ -11,6 +11,6 @@
         {{/if}}
       </div>
     </div>
-    <paper-checkbox checked class="{{boxcolor}}"></paper-checkbox>
+    <paper-checkbox class="{{boxcolor}}"></paper-checkbox>
   </div>
 </template>
