cse bar already fixed for september

--- a/client/body/body.html
+++ b/client/body/body.html
@@ -28,7 +28,7 @@
         {{#with GetColumnInfo 3}}
         {{> column}}
         {{/with}}
-        <!-- {{#with GetColumnInfo 4}} This is september ;)
+        {{#with GetColumnInfo 4}}
         {{> column}}
         {{/with}} -->
         {{#if NewInProgram}}
