--- a/client/body/body.html
+++ b/client/body/body.html
@@ -30,7 +30,8 @@
         {{/with}}
         {{#with GetColumnInfo 4}}
         {{> column}}
-        {{/with}} -->
+        {{/with}}
+
         {{#if NewInProgram}}
             {{> failedColumn}}
         {{/if}}
