--- a/client/course/resultGraph/resultGraph.html
+++ b/client/course/resultGraph/resultGraph.html
@@ -3,7 +3,7 @@
     <div class="course-top">
       <div class="name">{{Opleidingsonderdeel}}</div>
       <div class="top-bar {{color}}">
-        <div class="grade">{{Score}}</div>
+        <div class="grade">{{Score columnindex }}</div>
         {{#if validCredits }}
         <div class="credits">
           {{Studiepunten}}<span>stp</span>
