--- a/client/body/body.html
+++ b/client/body/body.html
@@ -31,10 +31,10 @@
         {{#with GetColumnInfo 4}}
         {{> column}}
         {{/with}}
+        {{#with GetColumnInfo 4}}
+            {{> tolerateColumn}}
+        {{/with}}
 
-        {{#if NewInProgram}}
-            {{> failedColumn}}
-        {{/if}}
           <!-- Planning stuff -->
         {{> planningColumn}}
         <!--Always show the bachelor column-->
