--- a/client/failedcourses/failedcourses.html
+++ b/client/failedcourses/failedcourses.html
@@ -10,7 +10,7 @@
                 </div>
 
                 <div class="credits">
-                    {{credits}}<span>stp</span>
+                    {{Studiepunten}}<span>stp</span>
                 </div>
             </div>
             <paper-ripple></paper-ripple>
